# ERRecombStudy

./: .gitignore  README.md  compile  show_track.ipynb
G4LXeTrackSimulation/: CMakeLists.txt  main.cpp
G4LXeTrackSimulation/include/: LXeDetectorConstruction.hh  LXePhysicsList.hh  LXePrimaryGeneratorAction.hh  LXeRunAction.hh  LXeSensitiveDetector.hh  LXeSteppingAction.hh  global.hh  utils.hh
G4LXeTrackSimulation/src/: LXeDetectorConstruction.cpp  LXePhysicsList.cpp  LXePrimaryGeneratorAction.cpp  LXeRunAction.cpp  LXeSensitiveDetector.cpp  LXeSteppingAction.cpp
notebooks/: CheckRecombMap.ipynb  CudaKernels.cpp  MapRecombMap.ipynb  PyCuda.ipynb  runG4.py  runIntegrator.py  utils.py
python/: get_recomb.ipynb  runG4.py
python/outdated/: CheckTracks.ipynb  MapRecombMap.ipynb  runG4.py  utils.py
spectra/: auger.py  auger_cascade.ipynb  dbd.ipynb  unit_system.ipynb
